--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -5,4 +5,12 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="hello_round">Hello Round World!</string>
     <string name="hello_square">Hello Square World!</string>
+
+    <string name="HIGH_TEMP_KEY" translatable="false">hightempkey</string>
+    <string name="LOW_TEMP_KEY" translatable="false">lowtempkey</string>
+    <string name="WEATID_KEY" translatable="false">weatheridkey</string>
+    <string name="DESC_KEY" translatable="false">desckey</string>
+
+    <string name="Text_RECEIVER_ACTION">com.example.android.sunshine.app.messageReceiver</string>
+    <string name="BRODCAST_INTENT_KEY">showText_key</string>
 </resources>
