Working as one way from app to wear

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -235,5 +235,8 @@
     <string name="gcm_defaultSenderId" translatable="false"></string>
     <!-- For Google Places API Attributions -->
     <string name="attribution_text">Powered by Google</string>
-
+    <string name="HIGH_TEMP_KEY" translatable="false">hightempkey</string>
+    <string name="LOW_TEMP_KEY" translatable="false">lowtempkey</string>
+    +    <string name="WEATID_KEY" translatable="false">weatheridkey</string>
+    +    <string name="DESC_KEY" translatable="false">desckey</string>
 </resources>
